--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--=============== CSS ===============-->
   <link rel="stylesheet" href="assets/css/styles.css">
 
-  <title>Responsive portfolio website Chris - Bedimcode</title>
+  <title>Portfolio - Sheshank</title>
 </head>
 
 <body>
@@ -113,9 +113,9 @@
               About Me
             </h3>
             <p class="home__info-description">
-              Hi, I'm Sheshank, Frontend Developer.
-              Passionate about designing beautiful web
-              interfaces. Based in India.
+              I'm Passionate about creating web-apps
+              with mulitple functionalities and learning
+               dapps
             </p>
           </div>
           <div>
@@ -156,12 +156,12 @@
             </p>
           </div>
           <div>
-            <h3 class="home__info-title">
+            <!-- <h3 class="home__info-title">
               Prior Experience
             </h3>
             <p class="home__info-number">
               Institute Web Development Team Member
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
@@ -309,7 +309,7 @@
       <img src="assets/img/shape-circle.svg" alt="qualification image" class="qualification__img">
     </section>
 
-    <!--==================== SERVICES ====================-->
+    <!-- ==================== SERVICES ==================== -->
     <section class="services section" id="services">
       <h2 class="section__title">Services</h2>
       <span class="section__subtitle">What i offer</span>
@@ -368,7 +368,75 @@
       <h2 class="section__title">Projects</h2>
       <span class="section__subtitle">Most recent work</span>
 
-      <div class="container section__border">
+      <div class="container section__border" >
+        <h2 class="projects_subheading">Web3 Projects</h2>
+        <div class="projects__container swiper" id="xyz">
+          <div class="swiper-wrapper">
+            <!--==================== PROJECT 1 ====================-->
+            <div class="projects__content swiper-slide">
+              <img src="assets/img/project1.jpg" alt="project1 image" class="projects__img">
+              <div>
+                <span class="projects__subtitle">Solidity + Hardhat + NextJs</span>
+                <h1 class="projects__title">Whitelist Dapp</h1>
+                <a href="https://whitelist-dapp-iota-lake.vercel.app/" class="projects__button">
+                  View demo <i class="ri-arrow-right-line"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PROJECT 2 ====================-->
+            <div class="projects__content swiper-slide">
+              <img src="assets/img/project2.jpg" alt="project1 image" class="projects__img">
+              <div>
+                <span class="projects__subtitle">Solidity + Hardhat + NextJs</span>
+                <h1 class="projects__title">NFT Collection</h1>
+                <a href="https://nft-collection-one-sage.vercel.app/" class="projects__button">
+                  View demo <i class="ri-arrow-right-line"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PROJECT 3 ====================-->
+            <div class="projects__content swiper-slide">
+              <img src="assets/img/project3.jpg" alt="project1 image" class="projects__img">
+              <div>
+                <span class="projects__subtitle">Solidity + Hardhat + NextJs</span>
+                <h1 class="projects__title">Initial Coin Offering Dapp</h1>
+                <a href="https://ico-dapp-five-eta.vercel.app/" class="projects__button">
+                  View demo <i class="ri-arrow-right-line"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PROJECT 4 ====================-->
+            <div class="projects__content swiper-slide">
+              <img src="assets/img/project4.jpg" alt="project1 image" class="projects__img">
+              <div>
+                <span class="projects__subtitle">Solidity + Hardhat + NextJs</span>
+                <h1 class="projects__title">DAO for NFT Holders</h1>
+                <a href="" class="projects__button">
+                  View demo <i class="ri-arrow-right-line"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PROJECT 5 ====================-->
+            <!-- <div class="projects__content swiper-slide">
+              <img src="assets/img/project4.jpg" alt="project1 image" class="projects__img">
+              <div>
+                <span class="projects__subtitle">BlockChain</span>
+                <h1 class="projects__title">Project 5</h1>
+                <a href="" class="projects__button">
+                  View demo <i class="ri-arrow-right-line"></i>
+                </a>
+              </div>
+            </div> -->
+          </div>
+          <div class="swiper-button-next">
+            <i class="ri-arrow-right-s-line"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="ri-arrow-left-s-line"></i>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <h2 class="projects_subheading">Web2 Projects</h2>
         <div class="projects__container swiper">
           <div class="swiper-wrapper">
             <!--==================== PROJECT 1 ====================-->
@@ -415,6 +483,17 @@
                 </a>
               </div>
             </div>
+            <!--==================== PROJECT 5 ====================-->
+            <div class="projects__content swiper-slide">
+              <img src="assets/img/project4.jpg" alt="project1 image" class="projects__img">
+              <div>
+                <span class="projects__subtitle">BlockChain</span>
+                <h1 class="projects__title">Project 5</h1>
+                <a href="" class="projects__button">
+                  View demo <i class="ri-arrow-right-line"></i>
+                </a>
+              </div>
+            </div>
           </div>
           <div class="swiper-button-next">
             <i class="ri-arrow-right-s-line"></i>
@@ -426,6 +505,7 @@
         </div>
       </div>
     </section>
+    
 
     <!--==================== TESTIMONIAL ====================-->
     <!-- <section class="testimonial section">
