update service changes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </h1>
           <div class="home__blob grid">
             <div class="home__perfil">
-              <img src="assets/img/perfil.png" alt="home perfil">
+              <img src="assets/img/peril.jpg" alt="home perfil">
             </div>
             <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
             <img src="assets/img/shape-circle.svg" alt="" class="home__shape-circle">
@@ -309,7 +309,7 @@
       <img src="assets/img/shape-circle.svg" alt="qualification image" class="qualification__img">
     </section>
 
-    <!-- ==================== SERVICES ==================== -->
+    <!-- ==================== SERVICES ====================
     <section class="services section" id="services">
       <h2 class="section__title">Services</h2>
       <span class="section__subtitle">What i offer</span>
@@ -322,7 +322,7 @@
             Web Applications
           </h2>
           <p class="services__description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, rerum!
+            Building Frontend of a webapp with complex functionalities.
           </p>
 
           <div class="services__border">
@@ -338,14 +338,14 @@
             Web3 Applications
           </h2>
           <p class="services__description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, rerum!
+            Building Dapps, Defi 
           </p>
 
           <div class="services__border"></div>
 
         </div>
 
-        <div class="services__card">
+        <!-- <div class="services__card">
           <i class="ri-layout-4-line"></i>
 
           <h2 class="services__title">
@@ -359,9 +359,9 @@
 
           </div>
 
-        </div>
-      </div>
-    </section>
+        </div> -->
+      <!-- </div>
+    </section> --> -->
 
     <!--==================== PROJECTS ====================-->
     <section class="projects section" id="projects">
@@ -444,7 +444,7 @@
               <img src="assets/img/project1.jpg" alt="project1 image" class="projects__img">
               <div>
                 <span class="projects__subtitle">Web</span>
-                <h1 class="projects__title">Modern Website</h1>
+                <h1 class="projects__title"></h1>
                 <a href="" class="projects__button">
                   View demo <i class="ri-arrow-right-line"></i>
                 </a>
