--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
         </div> -->
       <!-- </div>
-    </section> --> -->
+    </section> -->
 
     <!--==================== PROJECTS ====================-->
     <section class="projects section" id="projects">
