--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
               <i class="ri-trophy-line"></i>Qualification
             </a>
           </li>
-          <li class="nav__item">
+          <!-- <li class="nav__item">
             <a href="#services" class="nav__link ">
               <i class="ri-briefcase-line"></i>Services
             </a>
-          </li>
+          </li> -->
           <li class="nav__item">
             <a href="#projects" class="nav__link ">
               <i class="ri-image-line"></i>Projects
@@ -144,7 +144,7 @@
               Years of Experience
             </h3>
             <p class="home__info-number">
-              2+
+              1+
             </p>
           </div>
           <div>
