--- a/index.html
+++ b/index.html
@@ -374,11 +374,11 @@
           <div class="swiper-wrapper">
             <!--==================== PROJECT 1 ====================-->
             <div class="projects__content swiper-slide">
-              <img src="assets/img/project4.jpg" alt="project1 image" class="projects__img">
+              <img src="assets/img/project4.png" alt="project1 image" class="projects__img">
               <div>
                 <span class="projects__subtitle">Solidity + Hardhat + NextJs</span>
-                <h1 class="projects__title">DAO for NFT Holders</h1>
-                <a href="" class="projects__button">
+                <h1 class="projects__title">DEX like Uniswap</h1>
+                <a href="https://de-fi-exchange-rosy.vercel.app/" class="projects__button">
                   View demo <i class="ri-arrow-right-line"></i>
                 </a>
               </div>
