--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
         <div class="home__data grid">
           <h1 class="home__title">
             Hi, I`m Sheshank<br>
-            Frontend Develoer <br>
+            Web Develoer <br>
             Based in India<br>
           </h1>
           <div class="home__blob grid">
             <div class="home__perfil">
-              <img src="assets/img/peril.jpg" alt="home perfil">
+              <img src="assets/img/pic-BGless.png" alt="home perfil">
             </div>
             <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
             <img src="assets/img/shape-circle.svg" alt="" class="home__shape-circle">
@@ -114,8 +114,9 @@
             </h3>
             <p class="home__info-description">
               I'm Passionate about creating web-apps
-              with mulitple functionalities and learning
-               dapps
+              with mulitple functionalities.
+              <br> 
+              Learning dapps.
             </p>
           </div>
           <div>
@@ -132,8 +133,8 @@
               Services
             </h3>
             <p class="home__info-description">
-              UI/UX Design <br>
-              Frontend Applications<br>
+              Web Applications<br>
+              Dapps<br>
             </p>
           </div>
         </div>
@@ -443,59 +444,38 @@
           <div class="swiper-wrapper">
             <!--==================== PROJECT 1 ====================-->
             <div class="projects__content swiper-slide">
-              <img src="assets/img/project1.jpg" alt="project1 image" class="projects__img">
+              <img src="assets/img/project-1-web2.png" alt="project1" class="projects__img">
               <div>
-                <span class="projects__subtitle">Web</span>
-                <h1 class="projects__title"></h1>
-                <a href="" class="projects__button">
+                <span class="projects__subtitle">React + TypeScript</span>
+                <h1 class="projects__title">Notes App</h1>
+                <a href="notes-app-omega-amber.vercel.app" class="projects__button">
                   View demo <i class="ri-arrow-right-line"></i>
                 </a>
               </div>
             </div>
             <!--==================== PROJECT 2 ====================-->
             <div class="projects__content swiper-slide">
-              <img src="assets/img/project2.jpg" alt="project1 image" class="projects__img">
+              <img src="assets/img/Project-web2-2.png" alt="project1 image" class="projects__img">
               <div>
-                <span class="projects__subtitle">Web</span>
-                <h1 class="projects__title">Project 2</h1>
-                <a href="" class="projects__button">
+                <span class="projects__subtitle">HTML + CSS + JS</span>
+                <h1 class="projects__title">Cara Fashion</h1>
+                <a href="https://sheshankm.github.io/E-Commerce/" class="projects__button">
                   View demo <i class="ri-arrow-right-line"></i>
                 </a>
               </div>
             </div>
             <!--==================== PROJECT 3 ====================-->
             <div class="projects__content swiper-slide">
-              <img src="assets/img/project3.jpg" alt="project1 image" class="projects__img">
+              <img src="assets/img/project-3-web2.png" alt="project1 image" class="projects__img">
               <div>
-                <span class="projects__subtitle">ML</span>
-                <h1 class="projects__title">Project 3</h1>
-                <a href="" class="projects__button">
+                <span class="projects__subtitle">HTML + CSS + JS</span>
+                <h1 class="projects__title">Instagram Clone</h1>
+                <a href="https://sheshankm.github.io/Instagram-Clone/" class="projects__button">
                   View demo <i class="ri-arrow-right-line"></i>
                 </a>
               </div>
             </div>
-            <!--==================== PROJECT 4 ====================-->
-            <div class="projects__content swiper-slide">
-              <img src="assets/img/project4.jpg" alt="project1 image" class="projects__img">
-              <div>
-                <span class="projects__subtitle">BlockChain</span>
-                <h1 class="projects__title">Project 4</h1>
-                <a href="" class="projects__button">
-                  View demo <i class="ri-arrow-right-line"></i>
-                </a>
-              </div>
-            </div>
-            <!--==================== PROJECT 5 ====================-->
-            <div class="projects__content swiper-slide">
-              <img src="assets/img/project4.jpg" alt="project1 image" class="projects__img">
-              <div>
-                <span class="projects__subtitle">BlockChain</span>
-                <h1 class="projects__title">Project 5</h1>
-                <a href="" class="projects__button">
-                  View demo <i class="ri-arrow-right-line"></i>
-                </a>
-              </div>
-            </div>
+            
           </div>
           <div class="swiper-button-next">
             <i class="ri-arrow-right-s-line"></i>
