--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <!--==================== SKILLS 1 ====================-->
         <div class="skills__content">
           <h3 class="skills__title">
-            <i class="ri-braces-line"></i>Frontend Developer
+            <i class="ri-braces-line"></i>WEB2
           </h3>
           <div class="skills__info">
 
@@ -205,13 +205,7 @@
               <span class="skills__subtitle">Advanced</span>
             </div>
 
-            <div class="skills__data">
-              <div class="skills__blob">
-                <img src="assets/img/react-2.svg" alt="skills image">
-              </div>
-              <h3 class="skills__name">REACTJS</h3>
-              <span class="skills__subtitle">Intermediate</span>
-            </div>
+            
 
             <div class="skills__data">
               <div class="skills__blob">
@@ -220,14 +214,34 @@
               <h3 class="skills__name">GIT</h3>
               <span class="skills__subtitle">Intermediate</span>
             </div>
-
+            <div class="skills__data">
+              <div class="skills__blob">
+                <img src="assets/img/react-2.svg" alt="skills image">
+              </div>
+              <h3 class="skills__name">REACTJS</h3>
+              <span class="skills__subtitle">Intermediate</span>
+            </div>
+            <div class="skills__data">
+              <div class="skills__blob">
+                <img src="assets/img/typescript.svg" alt="skills image">
+              </div>
+              <h3 class="skills__name">TypeScript</h3>
+              <span class="skills__subtitle">Intermediate</span>
+            </div>
+            <div class="skills__data">
+              <div class="skills__blob">
+                <img src="assets/img/rust.svg" alt="skills image">
+              </div>
+              <h3 class="skills__name">RUST</h3>
+              <span class="skills__subtitle">Intermediate</span>
+            </div>
           </div>
         </div>
         <!--==================== SKILLS 2 ====================-->
         <div class="skills__content">
 
           <h3 class="skills__title">
-            SMARTCONTRACT DEVELOPER
+            WEB3
           </h3>
 
           <div class="skills__info">
